[project]
name = "exemplo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts (>=3.4.0,<4.0.0)"
]
license = {file = "LICENSE", text = 'BSD'}


[tool.briefcase]
project_name = "Exemplo"
bundle = "com.example"

[tool.briefcase.app.exemplo]
long_description = "Descrição longa..."
sources = ["exemplo"]
test_sources = ["tests"]

