[project]
name = "exemplo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts (>=3.4.0,<4.0.0)"
]
license = {file = "LICENSE", text = 'BSD'}


[tool.briefcase]
project_name = "Exemplo"
bundle = "com.example"

[tool.briefcase.app.exemplo]
description = "Descrição curta..."
long_description = "Descrição longa..."
sources = ["exemplo"]
test_sources = ["tests"]

[tool.briefcase.app.exemplo.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "47"
flatpak_sdk = "org.gnome.Sdk"

